--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/moment": "^1.6.1",
     "core-js": "^3.38.1",
+    "moment": "^2.30.1",
     "nuxt": "^2.15.8",
     "punycode": "^2.3.1",
     "vue": "^2.7.10",
+    "vue-datetime": "^1.0.0-beta.14",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
+    "vue2-datepicker": "^3.11.1",
     "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.6.10",
     "xlsx": "^0.18.5"
