--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.38.1",
     "moment": "^2.30.1",
     "nuxt": "^2.15.8",
+    "papaparse": "^5.4.1",
     "punycode": "^2.3.1",
     "vue": "^2.7.10",
     "vue-datetime": "^1.0.0-beta.14",
