--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/moment": "^1.6.1",
     "core-js": "^3.38.1",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "nuxt": "^2.15.8",
     "papaparse": "^5.4.1",
     "punycode": "^2.3.1",
@@ -28,6 +29,7 @@
     "vue2-datepicker": "^3.11.1",
     "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.6.10",
+    "vuex": "^3.6.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
