--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/moment": "^1.6.1",
     "core-js": "^3.38.1",
+    "exceljs": "^4.4.0",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "nuxt": "^2.15.8",
