--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.38.1",
     "decimal.js": "^10.4.3",
     "exceljs": "^4.4.0",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "nuxt": "^2.15.8",
